--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "handwriting-to-text",
+  "name": "RemAI",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -21,12 +21,17 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@capacitor-community/text-to-speech": "^4.1.0",
+    "@capacitor/android": "^6.1.1",
     "@capacitor/app": "6.0.0",
-    "@capacitor/core": "6.1.1",
+    "@capacitor/camera": "^6.0.1",
+    "@capacitor/core": "^6.1.1",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
+    "@ionic/pwa-elements": "^3.3.0",
+    "cordova-plugin-tts": "^0.2.3",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
